[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "ts-cf-dns"
version = "0.1.0"
description = "A Python API tool for taking IPv6 addresses from TailScale and adding them to other DNS services"
authors = [{name = "Nick Buraglio"}, {name = "Sam Oehlert"}]
requires-python = ">=3.12"

dependencies = [
    "argparse>=1.4.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
]
